56: create blog client
